Changes in version 1.4 (... 2007)

 - Fixed some OpenGL renderstate stuff. setBasicRenderstate returns with
   active texture layer 0. The material renderer must return from OnUnset
   with the same active texture layer. The alpha test is disabled and the
   texture mode should be GL_MODULATE.

 - Fixed CSoftwareTexture2::getOriginalSize, reported by CaptainPants. Added a
   new method CSoftwareTexture2::getMaxSize to return the size of the largest
   mipmap, which is used by texelarea instead of getOriginalSize.

 - Changed parameter order of addArrowMesh and added default parameters such
   that it's enough to set the color (or even just the name).

 - Fixed bugs in MY3D and OBJ loader.

 - Added IMeshCache::clearUnusedMeshes(). This allows the user to remove 
   meshes that are sitting in the mesh cache but aren't used by any scene nodes. 
   This is useful for example when changing levels.

 - Added IUnknown::getReferenceCount()

 - createDevice now reports errors if the driverType is unknown, previously it 
   created a window but populated it with a null driver without any warning.

 - Fixed a bug in CBillboardTextSceneNode::setText where the old text was not 
   cleared.

 - Changed irrArray::linear_search to use the == operator rather than <
   This may be slower in some cases, but it no longer returns false positives
   when searching arrays of classes that override the < operator but 
   !(x<y) && !(y<x) does not necessarily mean x==y (vectors, positions etc).

 - Fixed getSize/getOriginalSize method inversion in OpenGL textures.

 - Added per texture-layer filter settings, i.e. one can choose to filter
   only chosen texture layers. If all layers are set to the same value the
   convenience function material.setFlag(EMF_BILINEAR_FILTER, boolean) can be
   used, TRILINEAR_FILTER and ANISOTROPIC_FILTER do work, too. In all other
   cases material.BilinearFilter[i] (resp. TrilinerFilter[i] or
   AnisotropicFilter[i]) shall are to be used.
